After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774886 - Regression: fatal error: gst/gl/egl/gstglcontext_egl.h: No such file or directory
Regression: fatal error: gst/gl/egl/gstglcontext_egl.h: No such file or direc...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-23 00:28 UTC by minfrin
Modified: 2016-11-24 02:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Revert the hiding of gstglcontext_egl.h (559 bytes, patch)
2016-11-23 00:29 UTC, minfrin
rejected Details | Review

Description minfrin 2016-11-23 00:28:31 UTC
Current gst-omx fails to build as follows:

make[2]: Entering directory '/home/pi/packages/gstreamer-master/gst-omx/omx'
  CC       libgstomx_la-gstomxvideodec.lo
In file included from gstomxvideodec.c:41:0:
/usr/local/include/gstreamer-1.0/gst/gl/egl/gstglmemoryegl.h:32:41: fatal error: gst/gl/egl/gstglcontext_egl.h: No such file or directory
 #include <gst/gl/egl/gstglcontext_egl.h>
                                         ^
compilation terminated.
Makefile:704: recipe for target 'libgstomx_la-gstomxvideodec.lo' failed

The publicly installed header file gst/gl/egl/gstglmemoryegl.h includes the now-hidden header file gst/gl/egl/gstglcontext_egl.h, and any code depending on the first header (like gst-omx) breaks.

It appears there has been other breakage related to this:

https://bugzilla.gnome.org/show_bug.cgi?id=774518
Comment 1 minfrin 2016-11-23 00:29:23 UTC
Created attachment 340567 [details] [review]
Revert the hiding of gstglcontext_egl.h

Add a patch that reverts the hiding of the header, which fixes the gst-omx build.
Comment 2 Matthew Waters (ystreet00) 2016-11-23 02:37:42 UTC
commit 75d36b990d30f39ed4604d7fab56128cba23300b
Author: Matthew Waters <matthew@centricular.com>
Date:   Wed Nov 23 13:32:38 2016 +1100

    gl/memoryegl: remove access to private header gstglcontext_egl.h
    
    It's been removed and thus compiling anything against GstGLMemoryEGL
    would error with:
    
    In file included from gstomxvideodec.c:41:0:
    usr/include/gstreamer-1.0/gst/gl/egl/gstglmemoryegl.h:32:41: fatal error: gst/gl/egl/gstglcontext_egl.h: No such file or directory
     #include <gst/gl/egl/gstglcontext_egl.h>
                                             ^
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774886
Comment 3 minfrin 2016-11-24 00:22:29 UTC
I don't follow - does gst-omx now build properly?
Comment 4 Matthew Waters (ystreet00) 2016-11-24 01:31:32 UTC
Yes
Comment 5 Nicolas Dufresne (ndufresne) 2016-11-24 02:15:46 UTC
The include in gst-omx is fine, but an extra file was include erroneously afterward. This file was part of lingstgl in -bad. Hope this clarify. So update -bad and you should be fine.